WIP fix all tests but 1
Signed-off-by: Atanas Atanasov <a.v.atanasov98@gmail.com>